# saigon

./: Cargo.toml  README.md  cargo-publish-all
src/saigon/: Cargo.toml  README.md
src/saigon/examples/: hello_world.rs
src/saigon/src/: lib.rs
src/saigon_adapter_basecamp/: Cargo.toml  README.md
src/saigon_adapter_basecamp/src/: lib.rs
src/saigon_basecamp/: Cargo.toml
src/saigon_basecamp/src/: lib.rs
src/saigon_core/: Cargo.toml  README.md
src/saigon_core/src/: content.rs  lib.rs  plugin.rs
src/saigon_plugin_cat_fact/: Cargo.toml  README.md
src/saigon_plugin_cat_fact/src/: lib.rs
src/saigon_plugin_saucenao/: Cargo.toml  README.md
src/saigon_plugin_saucenao/src/: lib.rs
src/saigon_source_basecamp/: Cargo.toml
src/saigon_source_basecamp/src/: lib.rs
