[package]
name = "saigon_plugin_cat_fact"
version = "0.1.0"
description = "A Saigon plugin providing interesting facts about cats."
repository = "https://github.com/maxdeviant/saigon/tree/master/src/saigon_plugin_cat_fact"
keywords = ["saigon", "plugin"]
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
reqwest = "0.9"
saigon_core = { path = "../saigon_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
