[package]
name = "saigon_plugin_saucenao"
version = "0.1.0"
description = "A Saigon plugin providing reverse image searching powered by SauceNAO."
repository = "https://github.com/maxdeviant/saigon/tree/master/src/saigon_plugin_saucenao"
keywords = ["saigon", "plugin"]
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
reqwest = "0.9"
saigon_core = { path = "../saigon_core", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
